expected/main/lc/doll.err
ERROR: "doll.lc", line 5
entrypoint f
^
"f" is not in scope

ERROR: Aborting after previously reported error

